--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "team member management project",
   "main": "index.js",
   "scripts": {
+    "build": "tsc --rootDir ./src/",
+    "start": "ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,9 +28,24 @@
   "bugs": {
     "url": "https://github.com/kumar-rahul/team-member-management/issues"
   },
-  "homepage": "https://github.com/kumar-rahul/team-member-management#readme",
+  "homepage": "https://github.com/kumar-rahul/team-member-mganagement#readme",
   "devDependencies": {
     "tsc": "^1.20150623.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "typescript-ioc": "^1.2.5"
+  },
+  "dependencies": {
+    "@types/convict": "^4.2.1",
+    "@types/koa": "^2.0.48",
+    "@types/koa-bodyparser": "^4.2.2",
+    "@types/koa-router": "^7.0.40",
+    "convict": "^4.4.1",
+    "dotenv": "^8.0.0",
+    "jwt-simple": "^0.5.6",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.1.0"
   }
 }
