--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^8.1.0"
+    "ts-node": "^8.1.0",
+    "typeorm": "^0.2.17"
   }
 }
