--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "team member management project",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --rootDir ./src/",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "build": "npm run tslint && tsc --rootDir ./src/",
     "start": "ts-node src/index.ts",
+    "watch-server": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,7 +32,9 @@
   },
   "homepage": "https://github.com/kumar-rahul/team-member-mganagement#readme",
   "devDependencies": {
+    "nodemon": "^1.19.0",
     "tsc": "^1.20150623.0",
+    "tslint": "^5.16.0",
     "typescript": "^3.4.5",
     "typescript-ioc": "^1.2.5"
   },
@@ -39,17 +43,21 @@
     "@types/convict": "^4.2.1",
     "@types/koa": "^2.0.48",
     "@types/koa-bodyparser": "^4.2.2",
+    "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.40",
     "@types/koa__cors": "^2.2.3",
+    "class-validator": "^0.9.1",
     "convict": "^4.4.1",
     "dotenv": "^8.0.0",
     "jwt-simple": "^0.5.6",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-helmet": "^4.1.0",
     "koa-router": "^7.4.0",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^8.1.0",
-    "typeorm": "^0.2.17"
+    "typeorm": "^0.2.17",
+    "winston": "^3.2.1"
   }
 }
